--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,95 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Boon Tat Showcase
+email: monkpuah123@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Show case of what i know about programming
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "boontat.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github: https://github.com/boontat
+
+display_footer: none  #change this to 'none' if you want to hide the footer copyright text
+
+theme: jekyll-material-theme
+
+parallax_image_one: assets/images/startup3.jpg # These are the images used for the parallax background
+parallax_image_two: assets/images/startup3.jpg
+
+# Settings for the porfolio section
+
+portfolio_heading: Portfolio
+portfolio_type: cards #cards or carousel
+
+project_one: "First Project"
+project_one_description: Describe your project!
+project_one_url:
+project_one_icon: location_on # these are from materiailize css, the full collection is here: http://materializecss.com/icons.html
+
+project_two: Second Project
+project_two_description: Describe your project!
+project_two_url:
+project_two_icon: photo_camera
+
+project_three: Third Project
+project_three_description: Describe your project!
+project_three_url:
+project_three_icon: hotel
+
+project_four: Fourth Project
+project_four_description: Describe your project!
+project_four_url:
+project_four_icon: restaurant
+
+# Skill icons from https://konpa.github.io/devicon/
+
+skills:
+  - name: apache
+  - name: backbonejs
+  - name: bitbucket
+  - name: bootstrap
+  - name: bower
+  - name: codeigniter
+  - name: docker
+  - name: git
+  - name: github
+  - name: gitlab
+  - name: grunt
+  - name: html
+  - name: javascript
+  - name: laravel
+  - name: linux
+  - name: mocha
+  - name: mysql
+  - name: nginx
+  - name: nodejs
+  - name: php
+  - name: python
+  - name: ruby
+  - name: ssh
+  - name: trello
+  - name: ubuntu
+  - name: vim
+  - name: nano
+  - name: vagrant
+    uri: https://upload.wikimedia.org/wikipedia/fr/thumb/4/4b/Ansible_logo.png/220px-Ansible_logo.png # Add external icon, for internal icon use uri: /assets/my_icon.jpg
+
+icon_size: 50 # font-size of icons in px
+colored: colored # Leave blank for black and white icons
+
+project_button: Github
+
+syntax_highlighting: true # include the css for syntax highlighting
+
+cookie_accept_message: Thanks! # The pop-up dialog that appears after accepting the cookie notice.
 
 # Build settings
 markdown: kramdown
-theme: minima
+permalink: pretty
 plugins:
   - jekyll-feed
+  - jekyll-assets
+  - jekyll-minifier
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
