--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: About Me
-email: monkpuah123@gmail.com
+email: boontat.puah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I don't have good algorithm skill, but i like to use programming to solve problem.
   I like to automate workflow, i think workflow that required many steps should be blackboxed and document down for future reference.
