--- a/_config.yml
+++ b/_config.yml
@@ -36,12 +36,12 @@ portfolio_heading: Projects
 portfolio_type: cards #cards or carousel
 
 project_one: With PHP
-project_one_description: -
-project_one_url: -
+project_one_description:
+project_one_url:
 project_one_icon: location_on # these are from materiailize css, the full collection is here: http://materializecss.com/icons.html
 
 project_two: With Node
-project_two_description: Describe your project!
+project_two_description:
 project_two_url:
 project_two_icon: photo_camera
 
